<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/search_text" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:hint="@string/autocomplet_box"
        android:completionThreshold="4" >

        <requestFocus />

    </AutoCompleteTextView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/autocomplete"
        android:layout_marginTop="14dp"
        android:text="@string/search_text2" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:hint="@string/autocomplet_box2"
         android:completionThreshold="4" />

    <RadioGroup
        android:id="@+id/groupvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/travel_mode_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Car"
            android:checked="true" />

        <RadioButton
            android:id="@+id/travel_mode_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bus" />

        <RadioButton
            android:id="@+id/travel_mode_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Walk" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/groupvalue"
        android:layout_toRightOf="@+id/groupvalue"
        android:text="@string/submit" />

</RelativeLayout>